test/libyul/yulSyntaxTests/for_visibility_3.yul
{
	for {} 1 { let i := 1 } { pop(i) }
}
// ====
// dialect: evm
// ----
// DeclarationError 8198: (33-34): Identifier not found.
